--- a/src/app/_global/system/_components/header/header.component.html
+++ b/src/app/_global/system/_components/header/header.component.html
@@ -114,22 +114,43 @@
 </ng-template>
 
 <h2>MODAL</h2>
+<button
+  type="button"
+  (click)="openModalParam(templateModal)"
+  class="btn btn-outline-primary"
+>
+  Open Modal with template as param
+</button>
+
 <button type="button" (click)="openModal()" class="btn btn-outline-primary">
-  Open Modal
+  Open Modal with View Child
 </button>
 
 <ng-template #templateModal>
   <div class="modal-header">
     <h5 class="modal-title">Modal title</h5>
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+    <button type="button" class="close" (click)="modalRef.hide()">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
-  <div class="modal-body">Body</div>
+  <div class="modal-body">This is a modal loaded as param</div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-secondary" data-dismiss="modal">
+    <button type="button" class="btn btn-secondary" (click)="modalRef.hide()">
       Close
     </button>
-    <button type="button" class="btn btn-primary">Save</button>
+  </div>
+</ng-template>
+<ng-template #templateModalViewChild>
+  <div class="modal-header">
+    <h5 class="modal-title">Modal title</h5>
+    <button type="button" class="close" (click)="modalRef.hide()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">This is a modal loaded with view child</div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-secondary" (click)="modalRef.hide()">
+      Close
+    </button>
   </div>
 </ng-template>
