--- a/src/app/_global/system/_components/main/main.component.html
+++ b/src/app/_global/system/_components/main/main.component.html
@@ -1,3 +1,4 @@
-<app-header></app-header>
+<app-forms></app-forms>
+<!-- <app-header></app-header>
 <app-sidebar></app-sidebar>
-<app-footer></app-footer>
+<app-footer></app-footer> -->
