--- a/src/app/_global/system/_components/main/main.component.html
+++ b/src/app/_global/system/_components/main/main.component.html
@@ -1,4 +1,8 @@
-<app-forms></app-forms>
+<!-- <app-forms></app-forms> -->
 <!-- <app-header></app-header>
 <app-sidebar></app-sidebar>
-<app-footer></app-footer> -->
+ -->
+<app-loader></app-loader>
+<app-footer></app-footer>
+<app-pipes></app-pipes>
+<!-- <app-users-main></app-users-main> -->
