--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<app-system-main></app-system-main>
+<a [routerLink]="'/qa'">QA/</a>
+<a [routerLink]="'/users'">Users/</a>
+<a [routerLink]="'/default'">Default/</a>
+<a [routerLink]="'/testing'">Testing/</a>
+<div style="background: black; color: #fff">THIS IS MY HEADER</div>
+<div style="background: blue; color: #fff">
+  <router-outlet></router-outlet>
+</div>
+<div style="background: black; color: #fff">THIS is MY FOOTER</div>
